前端美化与修正

--- a/src/main/resources/templates/article/articlemain.html
+++ b/src/main/resources/templates/article/articlemain.html
@@ -109,8 +109,18 @@
                 用户
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><h6 class="dropdown-header">我的</h6></li>
                 <li><a class="dropdown-item" href="/user/tousercenter"><span class="bi-people"></span> 个人中心</a></li>
-                <li><a class="dropdown-item" href="#"><span class="bi-people"></span> 反馈</a></li>
+                <li><a class="dropdown-item" href="/user/userallarticle"><span class="bi-card-text"></span> 我的帖子</a></li>
+                <li><a class="dropdown-item" href="#"><span class="bi-back"></span> 我的主题</a></li>
+                <li><a class="dropdown-item" href="/user/usercollects"><span class="bi-star"></span> 我的收藏</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><h6 class="dropdown-header">安全</h6></li>
+                <li><a class="dropdown-item" href="/user/userinfo"><span class="bi-clipboard-data"></span> 我的信息</a></li>
+                <li><a class="dropdown-item" href="/user/tochangepwd"><span class="bi-key"></span> 修改密码</a></li>
+                <li><a class="dropdown-item" href="/user/tochangeemail"><span class="bi-at"></span> 修改邮箱</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><h6 class="dropdown-header">其他</h6></li>
                 <li><a class="dropdown-item" href="/user/logout"><span class="bi-power"></span> 退出登录</a></li>
             </ul>
         </div>
