管理员页面修正bug

--- a/src/main/resources/templates/errorhandle.html
+++ b/src/main/resources/templates/errorhandle.html
@@ -70,8 +70,8 @@
                     <p class="card-text" th:text="${errtext}">
                         <small class="text-muted">小山屋论坛</small>
                     </p>
-                    <a href="http://localhost:8080/login/tologin" class="btn btn-primary"><span class="bi-person"></span> 带我去登录页面</a>
-                    <a href="http://localhost:8080/ind/userindex" class="btn btn-primary"><span class="bi-house"></span> 带我去首页</a>
+                    <a href="/login/tologin" class="btn btn-primary"><span class="bi-person"></span> 带我去登录页面</a>
+                    <a href="/ind/userindex" class="btn btn-primary"><span class="bi-house"></span> 带我去首页</a>
                 </div>
             </div>
         </div>
