--- a/src/main/resources/templates/user/userchangeemailpage.html
+++ b/src/main/resources/templates/user/userchangeemailpage.html
@@ -122,11 +122,13 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tousercenter'">
                     <span class="bi-journal-check"></span> 我的数据</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/userallarticle'">
                     <span class="bi-card-text"></span> 我的帖子</button>
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-back"></span> 我的主题</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/usercollects'">
                     <span class="bi-star"></span> 我的收藏</button>
             </div>
             <h3>安全</h3>
