--- a/src/main/resources/templates/driftbottle/bottlegetnone.html
+++ b/src/main/resources/templates/driftbottle/bottlegetnone.html
@@ -123,7 +123,8 @@
                     <div class="mdui-card-primary-subtitle" th:text="${bottlesubtitle}">Subtitle</div>
                 </div>
                 <div class="mdui-card-actions">
-                    <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-blue">
+                    <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-blue"
+                        onclick="window.location.href='/bottle/tobottleindex'">
                         <i class="mdui-icon material-icons mdui-icon-left">home</i> 回到主页
                     </button>
                 </div>
