--- a/src/main/resources/templates/login/regpage.html
+++ b/src/main/resources/templates/login/regpage.html
@@ -110,9 +110,41 @@
                     <div class="mb-3">
                         <label for="headselect" class="form-label">头像</label>
                         <select id="headselect" class="form-select" aria-label="Default select example" v-model="uhead">
-                            <option value="0">27</option>
-                            <option value="1">嘉然</option>
+                            <option value="0">[默认头像组]27</option>
+                            <option value="1">[默认头像组]嘉然今天吃什么</option>
                         </select>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    默认头像组
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <table class="table">
+                                        <thead>
+                                        <tr>
+                                            <th>27</th>
+                                            <th>嘉然今天吃什么</th>
+                                            <th>应急食物</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td><img src="https://s3.bmp.ovh/imgs/2022/03/e08d5a7f92af19a3.jpg"
+                                                     style="width: 50px;height: 50px" alt="我是谁？"/> </td>
+                                            <td><img src="https://s3.bmp.ovh/imgs/2021/09/1ecc277aceb7f0cc.jpg"
+                                                     style="width: 50px;height: 50px"/> </td>
+                                            <td><img src="https://s3.bmp.ovh/imgs/2022/03/f03a122e2881b469.jpg"
+                                                     style="width: 50px;height: 50px"/> </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="ustatement" class="form-label">描述</label>
