--- a/src/main/resources/templates/driftbottle/bottleindex.html
+++ b/src/main/resources/templates/driftbottle/bottleindex.html
@@ -117,6 +117,7 @@
         </div>
         <div class="col-9">
             <h1><span class="bi-house"></span> 主页</h1>
+            <p><em th:text="'当前共有'+${countAll}+'个瓶子'"></em></p>
         </div>
     </div>
 
