--- a/src/main/resources/templates/login/regpage.html
+++ b/src/main/resources/templates/login/regpage.html
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">关于</a>
+                    <a class="nav-link active" aria-current="page" href="/login/tologin">登录</a>
                 </li>
             </ul>
         </div>
