解决登出失败的bug

--- a/src/main/resources/templates/mainpage/defaultandzero.html
+++ b/src/main/resources/templates/mainpage/defaultandzero.html
@@ -104,7 +104,7 @@
                 <li><a class="dropdown-item" href="/user/tochangeemail"><span class="bi-at"></span> 修改邮箱</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><h6 class="dropdown-header">其他</h6></li>
-                <li><a class="dropdown-item" href="/user/logout"><span class="bi-power"></span> 退出登录</a></li>
+                <li><a class="dropdown-item" href="/ind/logout"><span class="bi-power"></span> 退出登录</a></li>
             </ul>
         </div>
     </div>
